--- a/assets/css/styleCarrito.css
+++ b/assets/css/styleCarrito.css
@@ -30,3 +30,12 @@
 .card-footer{
     background-color: #f0f0f0;
 }
+
+.superman-icon {
+    position: fixed;
+    right: 20px;
+    top: 84%;
+    transform: translateY(-50%);
+    width: 50px;
+    cursor: pointer;
+}
