--- a/assets/css/styleIndex.css
+++ b/assets/css/styleIndex.css
@@ -67,5 +67,12 @@
     padding-right: 2%;
 }
 
-
+.superman-icon {
+    position: fixed;
+    right: 20px;
+    top: 84%;
+    transform: translateY(-50%);
+    width: 50px;
+    cursor: pointer;
+}
 
