--- a/assets/css/styleLogin.css
+++ b/assets/css/styleLogin.css
@@ -28,3 +28,12 @@
     padding: 3%;
     text-align: center;
 }
+
+.superman-icon {
+    position: fixed;
+    right: 20px;
+    top: 84%;
+    transform: translateY(-50%);
+    width: 50px;
+    cursor: pointer;
+}
